@@ -1,5 +1,6 @@
 Version 0.13
  Opensolaris packaging [for jucr]
+ Read OBD_CONFIGFILE environment variable for a config file
 
 Version 0.12 (released 2010-01-03)
  ftdipty: Support user-specified device and vendor ids
